fix pipeline paths

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,10 +5,10 @@ on:
     branches:
       - main
     paths:
-      - 'openscad/**/*.scad'
+      - '**/*.scad'
   pull_request:
     paths:
-      - 'openscad/**/*.scad'
+      - '**/*.scad'
   workflow_dispatch: # Allows manual triggering for releases
 
 jobs:
